fix z-index

--- a/grails-app/assets/stylesheets/application/layout.less
+++ b/grails-app/assets/stylesheets/application/layout.less
@@ -525,7 +525,7 @@ header {
   }
 
   > [ui-view='details'] {
-    z-index: 10;
+    z-index: 100;
     bottom: 0;
     right: 30px;
     > .panel-light {
